--- a/style.css
+++ b/style.css
@@ -24,34 +24,8 @@ Any style attributes declared there will override the ones in this file and will
  * Bootstrap
  */
 
-@media (min-width: 768px) {
-	.container {
-		width: 720px;
-	}
-}
-
-@media (min-width: 992px) {
-	.container {
-		width: 960px;
-	}
-}
-
-@media (min-width: 1200px) {
-	.container {
-		width: 1160px;
-	}
-}
-
-@media (min-width: 1350px) {
-	.container {
-		width: 1300px;
-	}
-}
-
-@media (min-width: 1490px) {
-	.container {
-		width: 1440px;
-	}
+.container {
+	width: 100%;
 }
 
 .nav-tabs {
@@ -758,12 +732,7 @@ audio {
 
 .navbar-nav.navbar-right {
 	margin-left: 0;
-}
-
-@media (min-width: 768px) {
-	.navbar-nav.navbar-right:last-child {
-		margin-right: -30px;
-	}
+	margin-right: -10px;
 }
 
 .navbar .nav > li > a {
@@ -911,51 +880,28 @@ audio {
 
 @media (min-width: 768px) {
 	.mega-menu > .dropdown-menu {
-		left: 15px;
-		right: auto;
-	}
-
-	.mega-menu > .dropdown-menu {
-		min-width:  750px;
-	}
-}
-
-@media (min-width: 992px) {
-	.mega-menu > .dropdown-menu {
-		min-width:  970px;
-	}
-}
-
-@media (min-width: 1200px) {
-	.mega-menu > .dropdown-menu {
-		min-width:  1080px;
-	}
-}
-
-@media (min-width: 1500px) {
-	.mega-menu > .dropdown-menu {
-		min-width:  1400px;
+		width:  100%;
 	}
 }
 
 .mega-menu > .dropdown-menu > .menu-item {
-	min-width: 216px;
+	min-width: 150px;
 }
 
 @media (min-width: 992px) {
 	.mega-menu > .dropdown-menu > .menu-item {
-		min-width: 212px;
+		min-width: 150px;
 	}
 }
 
 @media (min-width: 1200px) {
 	.mega-menu > .dropdown-menu > .menu-item {
-		min-width: 187px;
+		min-width: 150px;
 	}
 }
 
 .mega-menu > .dropdown-menu > .menu-item > a {
-	font-weight: 600;
+	font-weight: 500;
 }
 
 .mega-menu .dropdown-submenu > .dropdown-menu {
@@ -1004,7 +950,7 @@ audio {
 
 .dropdown-menu > li > a {
 	padding: 4px 20px;
-	color: #fff;
+	color: #000;
 	-webkit-transition: none;
 	   -moz-transition: none;
 	    -ms-transition: none;
@@ -2837,7 +2783,7 @@ header.navbar-inverse {
 .mega-menu > .dropdown-menu {
 	border-radius: 0;
 	padding: 0;
-	background-color: #b80023;
+	background-color: #fff;
 	border: 0;
 }
 
@@ -2845,12 +2791,29 @@ header.navbar-inverse {
 	text-align: center;
 }
 
+.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
+.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus,
+.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
 .mega-menu > .dropdown-menu > .active > a {
 	background-color: #b80023;
 	color: #ffc73c;
 }
 
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus,
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
 .mega-menu > .dropdown-menu > li > a:hover {
+	color: #b80023;
 	background-color: #fff;
+}
+
+.container > .navbar-header {
+	margin-left: 30px;
+}
+
+.navbar-nav .open .dropdown-menu {
+	background-color: #fff;
+}
+
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
 	color: #000;
 }
